--- a/index.css
+++ b/index.css
@@ -43,17 +43,17 @@ line-height: 40px;
   width: 100%;
 }
 
-navbar li {
+.navbar li {
       display: inline-block;
       width : 19%
 }
 
-navbar em {
+.navbar em {
   font-weight: bold;
   color : green;
 }
 
-time {
+.time {
   text-align : center;
 }
 
